--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div class="swiper-wrapper">
       <div class="swiper-slide box">
-        <img src="file:///C:/Users/user/Downloads/grocery/grocery/image/Apple.jpeg">
+        <img src="image/Apple.jpeg">
         <h1>Fresh apple</h1>
         <div class="price"> $14/- - 17/-</div>
         <div class="stars">
